--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^20.12.8",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "typescript": "^5.4.5"
   },
@@ -14,6 +15,7 @@
     "dev": "ts-node ./src/index.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "ts-node": "^10.9.2"
   }
